--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "pdfjs-dist": "^5.4.149",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-pdf": "^10.1.0",
     "react-router-dom": "^7.9.1",
     "recharts": "^2.15.4",
